# voice-device-firmware

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
components/airplay/: CMakeLists.txt  airplay.c
components/airplay/alac/: EndianPortable.c  alac_wrapper.cpp  alac_wrapper.h
components/airplay/include/: airplay.h
components/airplay/raop/: raop.c  raop_sink.c  raop_sink.h  rtp.c  util.c
components/alarm/: CMakeLists.txt  alarm.c
components/alarm/include/: alarm.h
components/audio_io/: CMakeLists.txt  audio_io.c
components/audio_io/include/: audio_io.h
components/captive_portal/: CMakeLists.txt  captive_portal.c
components/captive_portal/include/: captive_portal.h
components/leds_buttons/: CMakeLists.txt  leds_buttons.c
components/leds_buttons/include/: leds_buttons.h
components/mp3_decode/: CMakeLists.txt  mp3_decode.c
components/mp3_decode/include/: mp3_decode.h
components/nvs_creds/: CMakeLists.txt  nvs_creds.c
components/nvs_creds/include/: nvs_creds.h
components/oe_client/: CMakeLists.txt  oe_b64.c  oe_ota.c  oe_pair.c  oe_stt.c  oe_tts.c  oe_udplog.c  oe_ws.c
components/oe_client/include/: oe_client.h
components/vad/: CMakeLists.txt  vad.c
components/vad/include/: vad.h
components/wakeword/: CMakeLists.txt  wakeword.cpp
components/wakeword/include/: wakeword.h
components/wakeword/upstream/: preprocessor_settings.h  streaming_model.cpp  streaming_model.h
components/xvf3800_ctrl/: CMakeLists.txt  xvf3800_ctrl.c
components/xvf3800_ctrl/include/: xvf3800_ctrl.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  state.h
wakewords/: slot0.json  slot0.tflite  slot1.json  slot1.tflite
